Added classes to install and manage ufw service, stub provider for ufw allow

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -4,6 +4,7 @@
 fixtures:
   forge_modules:
   repositories:
+    stdlib: 'https://github.com/puppetlabs/puppetlabs-stdlib'
     facts: 'https://github.com/puppetlabs/puppetlabs-facts.git'
     puppet_agent: 'https://github.com/puppetlabs/puppetlabs-puppet_agent.git'
     provision: 'https://github.com/puppetlabs/provision.git'
