--- a/.editorconfig
+++ b/.editorconfig
@@ -13,8 +13,17 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yaml,yml}]
+[*.{toml,yml,yaml,xml}]
 indent_size = 2
+
+[*.{bash,sh}]
+indent_size = 4
+indent_style = tab
+
+[*.{ps1,bat}]
+indent_size = 4
+indent_style = tab
+end_of_line = crlf
 
 [*.{erb,pp,rb}]
 indent_size = 2
