--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on: pull_request
 jobs:
   setup_matrix:
     name: "Setup Test Matrix"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     outputs:
       matrix: ${{ steps.get-outputs.outputs.matrix }}
       spec_matrix: ${{ steps.get-outputs.outputs.spec_matrix }}
@@ -27,7 +27,7 @@ jobs:
 
   unit:
     needs: setup_matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ needs.setup_matrix.outputs.spec_matrix != '{}' }}
 
     strategy:
@@ -48,9 +48,6 @@ jobs:
           ruby-version: ${{ matrix.ruby_version }}
           bundler-cache: true
 
-      - name: Run tests
-        run: bundle exec rake
-
       - name: Print bundle environment
         run: |
           bundle env
@@ -62,3 +59,54 @@ jobs:
       - name: Run parallel_spec tests
         run: |
           bundle exec rake parallel_spec
+
+  acceptance:
+    needs: setup_matrix
+    runs-on: ubuntu-20.04
+    if: ${{ needs.setup_matrix.outputs.matrix != '{}' }}
+
+    strategy:
+      fail-fast: false
+      matrix: ${{fromJson(needs.setup_matrix.outputs.matrix)}}
+
+    name: "Acceptance: ${{matrix.platforms.label}}, ${{matrix.collection}}"
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
+          bundler-cache: true
+
+      - name: Print bundle environment
+        run: |
+          bundle env
+
+      - name: Provision test environment
+        run: |
+          bundle exec rake 'litmus:provision[docker,${{ matrix.platforms.image }}]'
+
+      - name: Install agent
+        run: |
+          bundle exec rake 'litmus:install_agent[${{ matrix.collection }}]'
+
+      - name: Install module
+        run: |
+          bundle exec rake 'litmus:install_module'
+
+      # - name: Display sysctl settings
+      #   run: |
+      #     bundle exec bolt command run 'sysctl -a' --targets localhost:2222 -i spec/fixtures/litmus_inventory.yaml
+
+      - name: Run acceptance tests
+        run: |
+          bundle exec rake 'litmus:acceptance:parallel'
+
+      - name: Remove test environment
+        if: ${{ always() }}
+        continue-on-error: true
+        run: |
+          if [[ -f inventory.yaml || -f spec/fixtures/litmus_inventory.yaml ]]; then
+            bundle exec rake 'litmus:tear_down'
+          fi
